--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -123,7 +123,7 @@ spec:
               namespace: backup-system
             patch:
               - op: add
-                path: "/spec/template/spec/initContainers/"
+                path: /spec/template/spec/initContainers/
                 value:
                   name: generate-ceph-files
                   image: curlimages/curl:7.78.0
