--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -124,8 +124,8 @@ spec:
               - op: add
                 path: /spec/template/spec/initContainers
                 value:
-                  name: generate-ceph-files
-                  image: curlimages/curl:7.78.0
-                  imagePullPolicy: Always
-                  command: ["/bin/sh"]
-                  args: ["-c", "curl https://ifconfig.me"]
+                  - name: generate-ceph-files
+                    image: curlimages/curl:7.78.0
+                    imagePullPolicy: Always
+                    command: ["/bin/sh"]
+                    args: ["-c", "curl https://ifconfig.me"]
