get rid of the c

--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -128,7 +128,7 @@ spec:
                     image: rook/ceph:v1.7.1
                     imagePullPolicy: Always
                     command: ["/tini"]
-                    args: ["-c", "curl -s https://raw.githubusercontent.com/rook/rook/master/images/ceph/toolbox.sh | bash"]
+                    args: ["curl -s https://raw.githubusercontent.com/rook/rook/master/images/ceph/toolbox.sh | bash"]
                     volumeMounts:
                       - name: mon-endpoint-volume
                         mountPath: /etc/rook
