change back to bash

--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -127,8 +127,8 @@ spec:
                   - name: generate-ceph-files
                     image: rook/ceph:v1.7.1
                     imagePullPolicy: Always
-                    command: ["/tini"]
-                    args: ["curl -s https://raw.githubusercontent.com/rook/rook/master/images/ceph/toolbox.sh | bash"]
+                    command: ["/bin/bash"]
+                    args: ["-c", "curl -s https://raw.githubusercontent.com/rook/rook/master/images/ceph/toolbox.sh | bash"]
                     volumeMounts:
                       - name: mon-endpoint-volume
                         mountPath: /etc/rook
