--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -111,7 +111,7 @@ spec:
                   - name: generate-ceph-files
                     image: bash:5.1.8-alpine3.14
                     imagePullPolicy: Always
-                    command: ["/usr/bin/bash"]
+                    command: ["/bin/bash"]
                     args:
                       [
                         "-c",
