generalize cronjob name

--- a/cluster/core/rook-ceph/reflector/cron-job.yaml
+++ b/cluster/core/rook-ceph/reflector/cron-job.yaml
@@ -2,7 +2,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: secret-reflector
+  name: reflector
   namespace: rook-ceph
 spec:
   schedule: "0 */12 * * *"
