--- a/cluster/core/rook-ceph/reflector/cron-job.yaml
+++ b/cluster/core/rook-ceph/reflector/cron-job.yaml
@@ -19,7 +19,8 @@ spec:
           restartPolicy: Never
           containers:
             - name: secret-reflector
-              image: ghcr.io/k8s-at-home/kubectl:v1.22.1
+              # image: ghcr.io/k8s-at-home/kubectl:v1.22.1
+              image: alpine/k8s:1.21.2
               env:
                 - name: SECRETS
                   value: "rook-ceph-mon"
@@ -32,7 +33,8 @@ spec:
                   subPath: secret-reflector.sh
                   readOnly: true
             - name: configmap-reflector
-              image: ghcr.io/k8s-at-home/kubectl:v1.22.1
+              # image: ghcr.io/k8s-at-home/kubectl:v1.22.1
+              image: alpine/k8s:1.21.2
               env:
                 - name: CONFIGMAPS
                   value: "rook-ceph-mon-endpoints"
