--- a/cluster/base/flux-system/charts/git/benji-charts.yaml
+++ b/cluster/base/flux-system/charts/git/benji-charts.yaml
@@ -6,9 +6,9 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m
-  url: https://github.com/elemental-lf/benji
+  url: https://github.com/carpenike/benji
   ref:
-    tag: v0.15.0
+    tag: master
   ignore: |
     # exclude all
     /*
