--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -120,230 +120,230 @@ spec:
         tag: v1.4.1
         pullPolicy: IfNotPresent
       nameOverride: pushgateway
-  postRenderers:
-    - kustomize:
-        patchesJson6902:
-          - target:
-              kind: Deployment
-              name: benji-maint
-            patch:
-              - op: add
-                path: /spec/template/spec/initContainers
-                value:
-                  - name: generate-ceph-files
-                    image: rook/ceph:v1.7.2
-                    imagePullPolicy: Always
-                    command: ["/usr/bin/bash"]
-                    args:
-                      [
-                        "-c",
-                        "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
-                      ]
-                    volumeMounts:
-                      - name: mon-endpoint-volume
-                        mountPath: /etc/rook
-                      - name: ceph-data
-                        mountPath: /etc/ceph
-                    env:
-                      - name: ROOK_CEPH_USERNAME
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-username
-                      - name: ROOK_CEPH_SECRET
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-secret
-          - target:
-              kind: CronJob
-              name: benji-backup-media
-            patch:
-              - op: add
-                path: /spec/jobTemplate/spec/template/spec/initContainers
-                value:
-                  - name: generate-ceph-files
-                    image: rook/ceph:v1.7.2
-                    imagePullPolicy: Always
-                    command: ["/usr/bin/bash"]
-                    args:
-                      [
-                        "-c",
-                        "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
-                      ]
-                    volumeMounts:
-                      - name: mon-endpoint-volume
-                        mountPath: /etc/rook
-                      - name: ceph-data
-                        mountPath: /etc/ceph
-                    env:
-                      - name: ROOK_CEPH_USERNAME
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-username
-                      - name: ROOK_CEPH_SECRET
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-secret
-          - target:
-              kind: CronJob
-              name: benji-backup-security
-            patch:
-              - op: add
-                path: /spec/jobTemplate/spec/template/spec/initContainers
-                value:
-                  - name: generate-ceph-files
-                    image: rook/ceph:v1.7.2
-                    imagePullPolicy: Always
-                    command: ["/usr/bin/bash"]
-                    args:
-                      [
-                        "-c",
-                        "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
-                      ]
-                    volumeMounts:
-                      - name: mon-endpoint-volume
-                        mountPath: /etc/rook
-                      - name: ceph-data
-                        mountPath: /etc/ceph
-                    env:
-                      - name: ROOK_CEPH_USERNAME
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-username
-                      - name: ROOK_CEPH_SECRET
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-secret
-          - target:
-              kind: CronJob
-              name: benji-cleanup
-            patch:
-              - op: add
-                path: /spec/jobTemplate/spec/template/spec/initContainers
-                value:
-                  - name: generate-ceph-files
-                    image: rook/ceph:v1.7.2
-                    imagePullPolicy: Always
-                    command: ["/usr/bin/bash"]
-                    args:
-                      [
-                        "-c",
-                        "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
-                      ]
-                    volumeMounts:
-                      - name: mon-endpoint-volume
-                        mountPath: /etc/rook
-                      - name: ceph-data
-                        mountPath: /etc/ceph
-                    env:
-                      - name: ROOK_CEPH_USERNAME
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-username
-                      - name: ROOK_CEPH_SECRET
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-secret
-          - target:
-              kind: CronJob
-              name: benji-backup-enforce
-            patch:
-              - op: add
-                path: /spec/jobTemplate/spec/template/spec/initContainers
-                value:
-                  - name: generate-ceph-files
-                    image: rook/ceph:v1.7.2
-                    imagePullPolicy: Always
-                    command: ["/usr/bin/bash"]
-                    args:
-                      [
-                        "-c",
-                        "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
-                      ]
-                    volumeMounts:
-                      - name: mon-endpoint-volume
-                        mountPath: /etc/rook
-                      - name: ceph-data
-                        mountPath: /etc/ceph
-                    env:
-                      - name: ROOK_CEPH_USERNAME
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-username
-                      - name: ROOK_CEPH_SECRET
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-secret
-          - target:
-              kind: CronJob
-              name: benji-backup-collab
-            patch:
-              - op: add
-                path: /spec/jobTemplate/spec/template/spec/initContainers
-                value:
-                  - name: generate-ceph-files
-                    image: rook/ceph:v1.7.2
-                    imagePullPolicy: Always
-                    command: ["/usr/bin/bash"]
-                    args:
-                      [
-                        "-c",
-                        "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
-                      ]
-                    volumeMounts:
-                      - name: mon-endpoint-volume
-                        mountPath: /etc/rook
-                      - name: ceph-data
-                        mountPath: /etc/ceph
-                    env:
-                      - name: ROOK_CEPH_USERNAME
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-username
-                      - name: ROOK_CEPH_SECRET
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-secret
-          - target:
-              kind: CronJob
-              name: benji-backup-home
-            patch:
-              - op: add
-                path: /spec/jobTemplate/spec/template/spec/initContainers
-                value:
-                  - name: generate-ceph-files
-                    image: rook/ceph:v1.7.2
-                    imagePullPolicy: Always
-                    command: ["/usr/bin/bash"]
-                    args:
-                      [
-                        "-c",
-                        "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
-                      ]
-                    volumeMounts:
-                      - name: mon-endpoint-volume
-                        mountPath: /etc/rook
-                      - name: ceph-data
-                        mountPath: /etc/ceph
-                    env:
-                      - name: ROOK_CEPH_USERNAME
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-username
-                      - name: ROOK_CEPH_SECRET
-                        valueFrom:
-                          secretKeyRef:
-                            name: rook-ceph-mon
-                            key: ceph-secret
+  # postRenderers:
+  #   - kustomize:
+  #       patchesJson6902:
+  #         - target:
+  #             kind: Deployment
+  #             name: benji-maint
+  #           patch:
+  #             - op: add
+  #               path: /spec/template/spec/initContainers
+  #               value:
+  #                 - name: generate-ceph-files
+  #                   image: rook/ceph:v1.7.2
+  #                   imagePullPolicy: Always
+  #                   command: ["/usr/bin/bash"]
+  #                   args:
+  #                     [
+  #                       "-c",
+  #                       "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
+  #                     ]
+  #                   volumeMounts:
+  #                     - name: mon-endpoint-volume
+  #                       mountPath: /etc/rook
+  #                     - name: ceph-data
+  #                       mountPath: /etc/ceph
+  #                   env:
+  #                     - name: ROOK_CEPH_USERNAME
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-username
+  #                     - name: ROOK_CEPH_SECRET
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-secret
+  #         - target:
+  #             kind: CronJob
+  #             name: benji-backup-media
+  #           patch:
+  #             - op: add
+  #               path: /spec/jobTemplate/spec/template/spec/initContainers
+  #               value:
+  #                 - name: generate-ceph-files
+  #                   image: rook/ceph:v1.7.2
+  #                   imagePullPolicy: Always
+  #                   command: ["/usr/bin/bash"]
+  #                   args:
+  #                     [
+  #                       "-c",
+  #                       "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
+  #                     ]
+  #                   volumeMounts:
+  #                     - name: mon-endpoint-volume
+  #                       mountPath: /etc/rook
+  #                     - name: ceph-data
+  #                       mountPath: /etc/ceph
+  #                   env:
+  #                     - name: ROOK_CEPH_USERNAME
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-username
+  #                     - name: ROOK_CEPH_SECRET
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-secret
+  #         - target:
+  #             kind: CronJob
+  #             name: benji-backup-security
+  #           patch:
+  #             - op: add
+  #               path: /spec/jobTemplate/spec/template/spec/initContainers
+  #               value:
+  #                 - name: generate-ceph-files
+  #                   image: rook/ceph:v1.7.2
+  #                   imagePullPolicy: Always
+  #                   command: ["/usr/bin/bash"]
+  #                   args:
+  #                     [
+  #                       "-c",
+  #                       "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
+  #                     ]
+  #                   volumeMounts:
+  #                     - name: mon-endpoint-volume
+  #                       mountPath: /etc/rook
+  #                     - name: ceph-data
+  #                       mountPath: /etc/ceph
+  #                   env:
+  #                     - name: ROOK_CEPH_USERNAME
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-username
+  #                     - name: ROOK_CEPH_SECRET
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-secret
+  #         - target:
+  #             kind: CronJob
+  #             name: benji-cleanup
+  #           patch:
+  #             - op: add
+  #               path: /spec/jobTemplate/spec/template/spec/initContainers
+  #               value:
+  #                 - name: generate-ceph-files
+  #                   image: rook/ceph:v1.7.2
+  #                   imagePullPolicy: Always
+  #                   command: ["/usr/bin/bash"]
+  #                   args:
+  #                     [
+  #                       "-c",
+  #                       "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
+  #                     ]
+  #                   volumeMounts:
+  #                     - name: mon-endpoint-volume
+  #                       mountPath: /etc/rook
+  #                     - name: ceph-data
+  #                       mountPath: /etc/ceph
+  #                   env:
+  #                     - name: ROOK_CEPH_USERNAME
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-username
+  #                     - name: ROOK_CEPH_SECRET
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-secret
+  #         - target:
+  #             kind: CronJob
+  #             name: benji-backup-enforce
+  #           patch:
+  #             - op: add
+  #               path: /spec/jobTemplate/spec/template/spec/initContainers
+  #               value:
+  #                 - name: generate-ceph-files
+  #                   image: rook/ceph:v1.7.2
+  #                   imagePullPolicy: Always
+  #                   command: ["/usr/bin/bash"]
+  #                   args:
+  #                     [
+  #                       "-c",
+  #                       "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
+  #                     ]
+  #                   volumeMounts:
+  #                     - name: mon-endpoint-volume
+  #                       mountPath: /etc/rook
+  #                     - name: ceph-data
+  #                       mountPath: /etc/ceph
+  #                   env:
+  #                     - name: ROOK_CEPH_USERNAME
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-username
+  #                     - name: ROOK_CEPH_SECRET
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-secret
+  #         - target:
+  #             kind: CronJob
+  #             name: benji-backup-collab
+  #           patch:
+  #             - op: add
+  #               path: /spec/jobTemplate/spec/template/spec/initContainers
+  #               value:
+  #                 - name: generate-ceph-files
+  #                   image: rook/ceph:v1.7.2
+  #                   imagePullPolicy: Always
+  #                   command: ["/usr/bin/bash"]
+  #                   args:
+  #                     [
+  #                       "-c",
+  #                       "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
+  #                     ]
+  #                   volumeMounts:
+  #                     - name: mon-endpoint-volume
+  #                       mountPath: /etc/rook
+  #                     - name: ceph-data
+  #                       mountPath: /etc/ceph
+  #                   env:
+  #                     - name: ROOK_CEPH_USERNAME
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-username
+  #                     - name: ROOK_CEPH_SECRET
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-secret
+  #         - target:
+  #             kind: CronJob
+  #             name: benji-backup-home
+  #           patch:
+  #             - op: add
+  #               path: /spec/jobTemplate/spec/template/spec/initContainers
+  #               value:
+  #                 - name: generate-ceph-files
+  #                   image: rook/ceph:v1.7.2
+  #                   imagePullPolicy: Always
+  #                   command: ["/usr/bin/bash"]
+  #                   args:
+  #                     [
+  #                       "-c",
+  #                       "curl -s https://raw.githubusercontent.com/carpenike/k8s-gitops/master/cluster/apps/backup-system/benji/generate-ceph.sh | bash",
+  #                     ]
+  #                   volumeMounts:
+  #                     - name: mon-endpoint-volume
+  #                       mountPath: /etc/rook
+  #                     - name: ceph-data
+  #                       mountPath: /etc/ceph
+  #                   env:
+  #                     - name: ROOK_CEPH_USERNAME
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-username
+  #                     - name: ROOK_CEPH_SECRET
+  #                       valueFrom:
+  #                         secretKeyRef:
+  #                           name: rook-ceph-mon
+  #                           key: ceph-secret
