--- a/cluster/apps/monitoring/botkube/kustomization.yaml
+++ b/cluster/apps/monitoring/botkube/kustomization.yaml
@@ -2,5 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- botkube-helm-values.enc.yaml
+# - botkube-helm-values.enc.yaml
 - helm-release.yaml
