--- a/cluster/apps/monitoring/botkube/helm-release.yaml
+++ b/cluster/apps/monitoring/botkube/helm-release.yaml
@@ -20,12 +20,7 @@ spec:
     image:
       repository: ghcr.io/infracloudio/botkube
     communications:
-      discord:
-        enabled: true
-        token: "${SECRET_BOTKUBE_DISCORD_TOKEN}"
-        botid: "${SECRET_BOTKUBE_DISCORD_BOT_ID}"
-        channel: "${SECRET_BOTKUBE_DISCORD_CHANNEL_ID}"
-        notiftype: short
+      existingSecretName: "botkube-communications"
     serviceMonitor:
       enabled: true
     config:
