should have given that one a different config pvc

--- a/cluster/apps/media/mylar/helm-release.yaml
+++ b/cluster/apps/media/mylar/helm-release.yaml
@@ -43,7 +43,7 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: bazarr-pvc
+        existingClaim: mylar-config-pvc
       data:
         enabled: true
         existingClaim: media-nfs-tank-share-pvc
