disable auth for the moment

--- a/cluster/apps/media/mylar/helm-release.yaml
+++ b/cluster/apps/media/mylar/helm-release.yaml
@@ -31,7 +31,7 @@ spec:
         ingressClassName: "traefik"
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
+          # traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
         hosts:
           - host: "mylar.${SECRET_DOMAIN}"
             paths:
