--- a/cluster/apps/media/readarr-ebooks/helm-release.yaml
+++ b/cluster/apps/media/readarr-ebooks/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: readarr
+  name: readarr-ebooks
   namespace: media
 spec:
   interval: 5m
@@ -34,37 +34,37 @@ spec:
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
         hosts:
-          - host: "readarr.${SECRET_DOMAIN}"
+          - host: "ebooks.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
         tls:
           - hosts:
-              - "readarr.${SECRET_DOMAIN}"
+              - "ebooks.${SECRET_DOMAIN}"
       api:
         enabled: true
         ingressClassName: "traefik"
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         hosts:
-          - host: "readarr.${SECRET_DOMAIN}"
+          - host: "ebooks.${SECRET_DOMAIN}"
             paths:
               - path: /api
                 pathType: Prefix
         tls:
           - hosts:
-              - "readarr.${SECRET_DOMAIN}"
+              - "ebooks.${SECRET_DOMAIN}"
     podSecurityContext:
       supplementalGroups:
         - 100
     persistence:
       config:
         enabled: true
-        existingClaim: readarr-config-pvc
-      media:
+        existingClaim: readarr-ebooks-config-pvc
+      data:
         enabled: true
         existingClaim: media-nfs-tank-share-pvc
-        mountPath: /media
+        mountPath: /data
     resources:
       requests:
         memory: 100Mi
