forgot one file

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -18,7 +18,8 @@ resources:
   - radarr
   - radarr-uhd
   - resilio-sync
-  - readarr
+  - readarr-audio
+  - readarr-ebooks
   - sabnzbd
   - sonarr
   - tautulli
