--- a/cluster/apps/media/calibre-web/helm-release.yaml
+++ b/cluster/apps/media/calibre-web/helm-release.yaml
@@ -30,10 +30,10 @@ spec:
       config:
         enabled: true
         existingClaim: calibre-web-config-pvc
-      media:
+      data:
         enabled: true
         existingClaim: media-nfs-tank-share-pvc
-        mountPath: /media
+        mountPath: /data
 
     ingress:
       main:
