Add external access to nzbhydra

--- a/cluster/apps/media/nzbhydra/helm-release.yaml
+++ b/cluster/apps/media/nzbhydra/helm-release.yaml
@@ -35,6 +35,9 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+
         hosts:
         - host: "nzbhydra.${SECRET_DOMAIN}"
           paths:
