define the postgresql pvc for benji

--- a/cluster/apps/backup-system/benji/helm-release.yaml
+++ b/cluster/apps/backup-system/benji/helm-release.yaml
@@ -113,6 +113,8 @@ spec:
       postgresqlUsername: benji
       postgresqlDatabase: benji
       postgresqlPassword: secret
+      persistence:
+        existingClaim: benji-postgresql-pvc
     pushgateway:
       image:
         registry: docker.io
