--- a/cluster/apps/mail/mta-sts/kustomization.yaml
+++ b/cluster/apps/mail/mta-sts/kustomization.yaml
@@ -2,5 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - mailu
-  - mta-sts
+  - mta-sts-configmap.yaml
+  - helm-release.yaml
