add amcrest secrets

--- a/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
@@ -26,14 +26,16 @@ stringData:
   HASS_SECRET_MIELE_CLIENT_SECRET: ENC[AES256_GCM,data:ekF1pOfZt2QIppb9TpYwFujgSgf9rnMUaKabMD6ZUeA=,iv:mB7esiT6Fm8yoBnzPIqJ0BMaXxTDu/vKwbPoRc//IQk=,tag:Nera4ldiT6aAxBLG19Ryvg==,type:str]
   HASS_SECRET_SP_DC: ENC[AES256_GCM,data:zHUvCP5C0U+WXOho98bTjhRQdtJRSxnhcKg3/vI/xRRX/uuNkPmMK8pdZ/M/+kORTbYSvZjjoujqAKH0Y8PJh3Zy92/mtbEn5dLbY7XoajSo1omyzVknZ+crDEHl7EVpeJjrFmPZGhvDF05zm/E=,iv:mCIOZKny7bVG5pOP1F4xvkfeT4swTMGGey2j2xTZe2M=,tag:OukyCBEO+t7b5fNgB2VflQ==,type:str]
   HASS_SECRET_SP_KEY: ENC[AES256_GCM,data:9DlMXcU2vUfuYAwiQhaM85+AaFk2e+wPgQHsASYg8IN8/brB,iv:iZXG51tyUTWa7l84JETu3jK+3uiAQSrQzvMooRTd2H8=,tag:ujdgEWHJEDUDSnUP6Sz1vQ==,type:str]
+  HASS_AMCREST_USERNAME: ENC[AES256_GCM,data:QOt1PdM/xzwAtK0q83qAnlg=,iv:k2FWnHu4bh5L1j4mwHdoIkWOBxwQE/zzroUvjsqjxiY=,tag:72u6w5sy+PQb47mfgrf2OQ==,type:str]
+  HASS_AMCREST_PASSWORD: ENC[AES256_GCM,data:wR+HL3K+/cH4hAHb,iv:Lx42Pl8xVJERByvR6y489XgWI3JPel4erLS9hfgEQY8=,tag:FlbneRcV8WQmh4itrnCTog==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-06T21:37:24Z"
-  mac: ENC[AES256_GCM,data:pnLHldN2fnf9ptKU0pPavLiGUJKBl3FPtjub1CNm8zp3R2M/SRbfBeHXG0+0Lhf6w8/gAYt4oV/b77rOyytoTXMxe4MGcHtN1rB3qouicbe1PGv3ApcecUb+u5y1cv3HqX3CZPf5XYlNhjYAHWgaVqNVYmlhA2gFFdkW2+PhCk4=,iv:fyDNjTxAw1ITwWSqjw2eaoo3ClsoZ0IT2sOPZDR2FS4=,tag:FDiDnP1VY548TUKv2Aj/SA==,type:str]
+  lastmodified: "2021-09-06T20:06:49Z"
+  mac: ENC[AES256_GCM,data:UukwGgNOvtYVp42xfwPIdV8hOPFHXf3Mxhqkkeopyb1Gi6BPDOx0b/Q8Rg6tx0qvC+jrZ8WALHDZIePtZhMHODxjD5wg62MRzvGF2NdHMpXAHuCTk6GvJ1GHCZDSo2un3mhnCfbsOJ2+UQh/M/FjSQ3VI6hrnH9jzqn6ATNeenQ=,iv:ZEy09cypd8EjfHdXUqKsUUpE0Wk4anHbdC+q2jgSlqY=,tag:/ZNOGEa8NCMCXj3XGGrhpA==,type:str]
   pgp:
     - created_at: "2021-06-03T18:15:35Z"
       enc: |
