--- a/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
@@ -26,7 +26,7 @@ stringData:
   HASS_SECRET_MIELE_CLIENT_SECRET: ENC[AES256_GCM,data:ekF1pOfZt2QIppb9TpYwFujgSgf9rnMUaKabMD6ZUeA=,iv:mB7esiT6Fm8yoBnzPIqJ0BMaXxTDu/vKwbPoRc//IQk=,tag:Nera4ldiT6aAxBLG19Ryvg==,type:str]
   HASS_SECRET_SP_DC: ENC[AES256_GCM,data:zHUvCP5C0U+WXOho98bTjhRQdtJRSxnhcKg3/vI/xRRX/uuNkPmMK8pdZ/M/+kORTbYSvZjjoujqAKH0Y8PJh3Zy92/mtbEn5dLbY7XoajSo1omyzVknZ+crDEHl7EVpeJjrFmPZGhvDF05zm/E=,iv:mCIOZKny7bVG5pOP1F4xvkfeT4swTMGGey2j2xTZe2M=,tag:OukyCBEO+t7b5fNgB2VflQ==,type:str]
   HASS_SECRET_SP_KEY: ENC[AES256_GCM,data:9DlMXcU2vUfuYAwiQhaM85+AaFk2e+wPgQHsASYg8IN8/brB,iv:iZXG51tyUTWa7l84JETu3jK+3uiAQSrQzvMooRTd2H8=,tag:ujdgEWHJEDUDSnUP6Sz1vQ==,type:str]
-  HASS_AMCREST_USERNAME: ENC[AES256_GCM,data:QOt1PdM/xzwAtK0q83qAnlg=,iv:k2FWnHu4bh5L1j4mwHdoIkWOBxwQE/zzroUvjsqjxiY=,tag:72u6w5sy+PQb47mfgrf2OQ==,type:str]
+  HASS_AMCREST_USERNAME: ENC[AES256_GCM,data:zUfT8oA=,iv:/6T5F+b1+mgORPHo7bJE4VFCO61mB7fgjyNBHaadLjA=,tag:8VPtiOXbySm8AC8NUU3+eg==,type:str]
   HASS_AMCREST_PASSWORD: ENC[AES256_GCM,data:wR+HL3K+/cH4hAHb,iv:Lx42Pl8xVJERByvR6y489XgWI3JPel4erLS9hfgEQY8=,tag:FlbneRcV8WQmh4itrnCTog==,type:str]
 sops:
   kms: []
@@ -34,8 +34,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-09-06T20:06:49Z"
-  mac: ENC[AES256_GCM,data:UukwGgNOvtYVp42xfwPIdV8hOPFHXf3Mxhqkkeopyb1Gi6BPDOx0b/Q8Rg6tx0qvC+jrZ8WALHDZIePtZhMHODxjD5wg62MRzvGF2NdHMpXAHuCTk6GvJ1GHCZDSo2un3mhnCfbsOJ2+UQh/M/FjSQ3VI6hrnH9jzqn6ATNeenQ=,iv:ZEy09cypd8EjfHdXUqKsUUpE0Wk4anHbdC+q2jgSlqY=,tag:/ZNOGEa8NCMCXj3XGGrhpA==,type:str]
+  lastmodified: "2021-09-07T03:01:48Z"
+  mac: ENC[AES256_GCM,data:SNGIticd4iLfg0UvbrigzzpUfT8u49az9JOExOk7JbO8ufMO7kz3GBrh78jqpqfIJaFqxOS9vnVTaw+I5U+ZQSdhGcx30zoz4x3jRODXkj2RIHHkEmAZaHyHiv63AwTVK/bz60HzQkLxuFNjg4ixMOnDokCuRfulLAS9HQWoSmo=,iv:U7OggNWIQZWF1qI/5KCSuV6WkJSpXm7gBIvatbkUNnU=,tag:tsBFLl9oNMP9OR6Ntm/jBg==,type:str]
   pgp:
     - created_at: "2021-06-03T18:15:35Z"
       enc: |
