add cluster secrets for amcrest2mqtt

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -64,14 +64,17 @@ stringData:
   SECRET_YOURLS_ADMIN_PASSWORD: ENC[AES256_GCM,data:LKD895g51P2r0RnqrYNS,iv:WVDe1RvYVgcHL91a0EQrODfIBfC06KPYSReVv6gvVeM=,tag:jwcvYNwc6cLhRNH3rjpYEQ==,type:str]
   SECRET_YOURLS_MYSQL_PASSWORD: ENC[AES256_GCM,data:F1bA3M+HYoecBSJ+Jp4DUQ52aCMx/yUH,iv:rK80DzEBpQDFSMDoch/Kpvaev2TedbyTgJaM2Ld/vOQ=,tag:d/HI2OT1iIiDdXdot5ofjA==,type:str]
   SECRET_YOURLS_MYSQL_ROOT_PASSWORD: ENC[AES256_GCM,data:MEja513S2tEaQqphVery/oZYPPGigHJe,iv:IRAQ8RUb0235I9vPfmp2ROmSG7+VpTI1BMh2yQ4bU9c=,tag:xNqJoV/mAT0mqb/+A0qjqA==,type:str]
+  SECRET_AMCREST2MQTT_AMCREST_USERNAME: ENC[AES256_GCM,data:WngFHsg=,iv:uIIC+tyRQOoI7CEKpLJIphb3EZYCgEjAzhM+r8I0bIk=,tag:amnhTjr9oFlZM4EXMOIi7w==,type:str]
+  SECRET_AMCREST2MQTT_AMCREST_PASSWORD: ENC[AES256_GCM,data:xpLzsuWwH7Kpcqp6,iv:7uralFmMBv25WlvaHXDOMd/q2FVmgHzgcYmu0Ip2oQw=,tag:b4DVWmoFgRcR31M8AjYZsw==,type:str]
+  SECRET_AMCREST2MQTT_AMCREST_HOST: ENC[AES256_GCM,data:n4yZaaAXMNcvopllzQ==,iv:bzxkRKkx+pmqxzt+umzZzZHLKjInu6TglOgZlXEf8pk=,tag:C14dNSB//inv0tIhPkVFWw==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-23T20:29:59Z"
-  mac: ENC[AES256_GCM,data:d2Y+cfsSeT8R83hRQ6t1hBWhrwhqBD75wKcWbrURPueVusuEPyr1qqF6LH8W9zVKQn4hDuCWMnbb77yg+ippfuVEAggsKsAojXSLyaLDCa0lXkJllonPrNG8F6HJtzwfodhkFN8I51WmgUzGiUu/QvsWUTcbUdkYlI54zhE0VLg=,iv:uGsuewYnatOX4p7FYlY9++HLTuQFKi4hwnw+mCnD1Yo=,tag:D3ckXT0QerCBHuYLaaNOQQ==,type:str]
+  lastmodified: "2021-09-07T03:05:53Z"
+  mac: ENC[AES256_GCM,data:ntPKjA1yOPRyTXP36GHhTw5it6ztKpT1ZFgQbKIn8HucUYiqXJNechPqrKl6On7bDl8OAioB2L+wUMhSm5F2NHK6gKWa4h1VuSX6NEA9B3SD2KMSk1T+Z3yNZjcZJgEXsRgd7S3Fk8L2YA/HcF7maq7qC8Vv5tVEazxdaQ38kRg=,iv:Wos+6cqX/CJ4Owcy8JVsigYssssOJuMqenV+y5selJ0=,tag:eudtFb46XAseu6aUKm82fg==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
