update secret for amcrest to be http safe

--- a/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
@@ -27,15 +27,15 @@ stringData:
   HASS_SECRET_SP_DC: ENC[AES256_GCM,data:zHUvCP5C0U+WXOho98bTjhRQdtJRSxnhcKg3/vI/xRRX/uuNkPmMK8pdZ/M/+kORTbYSvZjjoujqAKH0Y8PJh3Zy92/mtbEn5dLbY7XoajSo1omyzVknZ+crDEHl7EVpeJjrFmPZGhvDF05zm/E=,iv:mCIOZKny7bVG5pOP1F4xvkfeT4swTMGGey2j2xTZe2M=,tag:OukyCBEO+t7b5fNgB2VflQ==,type:str]
   HASS_SECRET_SP_KEY: ENC[AES256_GCM,data:9DlMXcU2vUfuYAwiQhaM85+AaFk2e+wPgQHsASYg8IN8/brB,iv:iZXG51tyUTWa7l84JETu3jK+3uiAQSrQzvMooRTd2H8=,tag:ujdgEWHJEDUDSnUP6Sz1vQ==,type:str]
   HASS_AMCREST_USERNAME: ENC[AES256_GCM,data:zUfT8oA=,iv:/6T5F+b1+mgORPHo7bJE4VFCO61mB7fgjyNBHaadLjA=,tag:8VPtiOXbySm8AC8NUU3+eg==,type:str]
-  HASS_AMCREST_PASSWORD: ENC[AES256_GCM,data:wR+HL3K+/cH4hAHb,iv:Lx42Pl8xVJERByvR6y489XgWI3JPel4erLS9hfgEQY8=,tag:FlbneRcV8WQmh4itrnCTog==,type:str]
+  HASS_AMCREST_PASSWORD: ENC[AES256_GCM,data:AQ4n7zzX/XGTHgR3,iv:6oEeJz6+7WyNj+2+nLPeIRfztt9fvZlYKV66tt547eI=,tag:44R9I0K7PfWI0Dd+nfZ5UA==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-09-07T03:01:48Z"
-  mac: ENC[AES256_GCM,data:SNGIticd4iLfg0UvbrigzzpUfT8u49az9JOExOk7JbO8ufMO7kz3GBrh78jqpqfIJaFqxOS9vnVTaw+I5U+ZQSdhGcx30zoz4x3jRODXkj2RIHHkEmAZaHyHiv63AwTVK/bz60HzQkLxuFNjg4ixMOnDokCuRfulLAS9HQWoSmo=,iv:U7OggNWIQZWF1qI/5KCSuV6WkJSpXm7gBIvatbkUNnU=,tag:tsBFLl9oNMP9OR6Ntm/jBg==,type:str]
+  lastmodified: "2021-09-07T03:40:47Z"
+  mac: ENC[AES256_GCM,data:MZwSNNKaVMJm3CeTjSZ194SwhASUG14McUmCLjEKiDbGLXfwBGb68ei326dojlAW8NwYQtc69+zKJSh1RT3VbaTF5QXiaNUIdWaGX2mPESk++ut5JkqSrKoRseviCkuWfBa32aYIODpsCUbS5voWGiTCpWsy7l1aD3i+k9fFgMM=,iv:wKEDcwo8NujlDXKe0xpitooAcaX5yG8QF0/p4WsUf0c=,tag:4kEEGef4XMRtCive+2Tidw==,type:str]
   pgp:
     - created_at: "2021-06-03T18:15:35Z"
       enc: |
