add vikunja secret

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -17,6 +17,7 @@ stringData:
   SECRET_DEX_GITHUB_CLIENT_SECRET: ENC[AES256_GCM,data:VUjUn1Ktw/JhrqAzHmB48tEnU8KPHKwOwdlNCXPYt6t+rQYULFY3Ag==,iv:YQ9vbWLIyhYBwnyuBq5Fo2A9bVpefjy6yiFBYPAS09g=,tag:s9qIDXQlR+ZBWQGjcnQ5hw==,type:str]
   SECRET_DEX_K8S_AUTHENTICATOR_CLIENT_SECRET: ENC[AES256_GCM,data:N5ksmryawu6xofHB4e87lzzP7JxTL2149rafBZ2OC2QBHVgsu4SWgg==,iv:iH+4ydQkveJ1fwz4fVTADEUXjduEtybM28w/5KFH+Aw=,tag:IwkKQcXzGQFEcn4C8kNuNw==,type:str]
   SECRET_AUTHENTIK_GRAFANA_CLIENT_SECRET: ENC[AES256_GCM,data:KTSOBl3OOZjN2JRQC+iKApqKwhmlJIZyIU6fM3CZ580fygUHsgd0dA==,iv:aYITLBBCgtIchkvKpW5bs7sVsEavj31mU3DB2Hs9rQ4=,tag:nWg5vUK0A790zJj7PFnERw==,type:str]
+  SECRET_AUTHENTIK_VIKUNJA_CLIENT_SECRET: ENC[AES256_GCM,data:Ftphce2UStE+MpM1ymebgPWyQuGAIjxpZZbtd99Ha67vYSB6zRc4ZcPUIaluu5sSlQYmy/8yXDknBvHAOFmOasvTvZeT8jkWUxnek1elcle2UuoVWD3zaSIfAJ5DLNBWI7eZyPVyAWt2C5OrV9qpbcO522fd5qd1z6tGYQUL1YI=,iv:N1pFUYX2QAqxwBOVLS1u7g/mh+po/P04kP0aSJDPSGM=,tag:zJeeIFr3CEDWVotYe3xgag==,type:str]
   SECRET_DEX_NEXTCLOUD_CLIENT_SECRET: ENC[AES256_GCM,data:+P5nPttCphAWqGgzRAWE2nuSDcTlzxByHhp33Iu5LO/omgGAO3i8VA==,iv:qfM0PBh4fXUL7SpCu0XRQSr2rq4/uEq404u4SqLR0+0=,tag:odraAF3Ir7TAIHmF/D/Etg==,type:str]
   SECRET_DEX_OAUTH2_PROXY_CLIENT_SECRET: ENC[AES256_GCM,data:+IeX1ovz0hKhmO+Dmj9LM4QoU3X13wgxQl1lXJtT4VJ739o11xfkMA==,iv:wjEv1UaA0uW2cDtL27PwjT1H5ETGQhlHJ6HqQNdVhyk=,tag:WpDzwDf6KJoWTdP1ORt+9Q==,type:str]
   SECRET_DEX_GITEA_CLIENT_SECRET: ENC[AES256_GCM,data:CgzVrqAVUBJ0v0c/UBWmuC6ge3Suk2/KVhQ3iUohhXYOlXDtZvK4zQ==,iv:C12rsDlwtfQZsEtYUBicd79ZUoQSfNY6ChJE62DPZak=,tag:NA4B+XPut/kSpF1bxKpMAQ==,type:str]
@@ -73,8 +74,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-09-07T03:40:29Z"
-  mac: ENC[AES256_GCM,data:oX+7/4emj6Oc10pFewmw6RUA3HmKKqgm2d/3OnI1hsAKBkf/Kpfr/MndprVbExwc63SIcV3o/NAgUIUIL06EO0XTnngrLoLewEf3fvlHvCHvS1Qqv1NwF4RM0KkRdvmfK1tBNMQtDlVCj/xdSCJVVAwuxJXWjgYlgnsM+NAdBqw=,iv:HFsqjaBCaSU9tIGoUyxHT1P27DFJhHEe5zS7YcLDY4c=,tag:GFIg9z5LwtTIEQ8pyJJz1w==,type:str]
+  lastmodified: "2021-09-07T14:31:24Z"
+  mac: ENC[AES256_GCM,data:o30XSyvJD02oWJqvF0O1mSWsuf3PqgzY/B8HKj5C8iTCiImOZm1nHL+MelKR6Hm4kiMwiuqkhYJtd/IRTJghOdt+uP83zw+P5GoPg/zSJZV7s/N31vcu/vy75SeH9LaDkrcQoPWadRTMjIJn0jLz7QrSosVdpmThfI7KJjSef3E=,iv:HI1ujiiyk7Waoxz/xGdI7HvcjIWlyWdhhgZBzc6x5rM=,tag:IwUe5kUzqPxzSG71U+g1AA==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
