attempt to use a configmap in vikunja

--- a/cluster/apps/collab/vikunja/helm-release.yaml
+++ b/cluster/apps/collab/vikunja/helm-release.yaml
@@ -88,6 +88,14 @@ spec:
         enabled: true
         existingClaim: vikunja-files-pvc
         mountpath: /app/vikunja/files
+      config:
+        enabled: true
+        type: custom
+        readOnly: true
+        mountPath: /app/vikunja/config.yml
+        volumeSpec:
+          configMap:
+            name: vikunja-config-yml
 
     postgresql:
       postgresqlPostgresPassword: ${SECRET_VIKUNJA_POSTGRES_ADMIN_PASSWORD}
