--- a/cluster/apps/collab/vikunja/helm-release.yaml
+++ b/cluster/apps/collab/vikunja/helm-release.yaml
@@ -92,7 +92,7 @@ spec:
         enabled: true
         type: custom
         readOnly: true
-        mountPath: /app/vikunja/config.yml
+        mountPath: /app/vikunja
         volumeSpec:
           configMap:
             name: vikunja-config-yml
